...
                        tint = BrandBlueDark,
                        modifier = Modifier.size(28.dp)
                    )
                }
                
                Text(
                    text = "Log In or Register",
                    fontSize = 18.sp,
                    fontWeight = FontWeight.Bold,
                    color = BrandBlueDark.copy(alpha = 0.8f),
                    modifier = Modifier.padding(end = 40.dp)
                )
                
...
            ) {
                Row(
                    horizontalArrangement = Arrangement.Center,
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Text(
                        text = "Continue",
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold
                    )
                    Spacer(Modifier.width(8.dp))
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowForward,
...
