...
                }
            }
            
            Spacer(modifier = Modifier.height(24.dp))
            
            Text(
                text = "Patient Medical Profile",
                fontSize = 36.sp,
                fontWeight = FontWeight.ExtraBold,
                color = BrandBlueDark,
                lineHeight = 44.sp
            )
            
...
